--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
         <meta charset="utf-8">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>title here</title>
+        <title>Angular Timetable Application</title>
+        <!-- ================ CSS ============ -->
+        <link rel="stylesheet" href="dist/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="css/style.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular-route.js"></script>
+        <!-- ================ ANGULARJS ============ -->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular-route.js"></script>
         <script src="js/app.js"></script>
         <script src="js/controllers.js"></script>
         <link rel="author" href="humans.txt">
     </head>
     <body>
+        <!-- ================ EVERYTHING IS DISPLAYED WITHIN THE ng-view ============ -->
 		<div ng-view></div>
         <script src="js/main.js"></script>
     </body>
